// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Settings: Updater matches snapshot 1`] = `
<div>
  <div
    class="material-settings__updater"
  >
    <div
      class="mdc-layout-grid"
    >
      <div
        class="mdc-layout-grid__inner"
      >
        <div
          class="mdc-layout-grid__cell mdc-layout-grid__cell--span-7 mdc-layout-grid__cell--align-middle"
        >
          <h3
            class="title-large"
          >
            Google Fonts
          </h3>
          <p
            class="body-large"
          >
            Last update on Tue, 13 Apr 2021 14:58:26 GMT
          </p>
        </div>
        <div
          class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3 mdc-layout-grid__cell--align-middle material-settings__cell--justify-end"
        >
          <div
            class="material-settings__switch"
          >
            <div
              class="mdc-switch material-wizard-switch mdc-switch--checked"
            >
              <div
                class="mdc-switch__track"
              />
              <div
                class="mdc-switch__thumb-underlay"
              >
                <div
                  class="mdc-switch__thumb"
                />
                <input
                  aria-checked="true"
                  checked=""
                  class="mdc-switch__native-control"
                  id="updater-1"
                  role="switch"
                  type="checkbox"
                />
              </div>
            </div>
            <label
              for="updater-1"
              id="label-updater-1"
            >
              Auto-updates enabled
            </label>
          </div>
        </div>
        <div
          class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2 mdc-layout-grid__cell--align-middle material-settings__cell--justify-end"
        >
          <button
            class="mdc-button mdc-button--raised"
          >
            <i
              aria-hidden="true"
              class="material-icons mdc-button__icon leading-icon"
            >
              cached
            </i>
            <span
              class="mdc-button__label"
            >
              Update
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Settings: Updater matches snapshot when disabled 1`] = `
<div>
  <div
    class="material-settings__updater"
  >
    <div
      class="mdc-layout-grid"
    >
      <div
        class="mdc-layout-grid__inner"
      >
        <div
          class="mdc-layout-grid__cell mdc-layout-grid__cell--span-7 mdc-layout-grid__cell--align-middle"
        >
          <h3
            class="title-large"
          >
            Google Fonts
          </h3>
          <p
            class="body-large"
          >
            To enable Google Fonts updates please 
            <a
              href="https://developers.google.com/fonts/docs/developer_api#APIKey"
              rel="noopener noreferrer"
              target="_blank"
            >
              activate Google API Key
            </a>
             first
          </p>
        </div>
        <div
          class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3 mdc-layout-grid__cell--align-middle material-settings__cell--justify-end"
        />
        <div
          class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2 mdc-layout-grid__cell--align-middle material-settings__cell--justify-end"
        >
          <div
            class="material-settings__message material-settings__message--error"
          >
            <i
              aria-hidden="true"
              class="material-icons mdc-button__icon leading-icon"
            >
              error
            </i>
            <span
              class="material-settings__message-text"
            >
              Updates disabled
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Settings: Updater matches snapshot when never updated 1`] = `
<div>
  <div
    class="material-settings__updater"
  >
    <div
      class="mdc-layout-grid"
    >
      <div
        class="mdc-layout-grid__inner"
      >
        <div
          class="mdc-layout-grid__cell mdc-layout-grid__cell--span-7 mdc-layout-grid__cell--align-middle"
        >
          <h3
            class="title-large"
          >
            Google Fonts
          </h3>
          <p
            class="body-large"
          >
            Last update on never
          </p>
        </div>
        <div
          class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3 mdc-layout-grid__cell--align-middle material-settings__cell--justify-end"
        >
          <div
            class="material-settings__switch"
          >
            <div
              class="mdc-switch material-wizard-switch mdc-switch--checked"
            >
              <div
                class="mdc-switch__track"
              />
              <div
                class="mdc-switch__thumb-underlay"
              >
                <div
                  class="mdc-switch__thumb"
                />
                <input
                  aria-checked="true"
                  checked=""
                  class="mdc-switch__native-control"
                  id="updater-3"
                  role="switch"
                  type="checkbox"
                />
              </div>
            </div>
            <label
              for="updater-3"
              id="label-updater-3"
            >
              Auto-updates enabled
            </label>
          </div>
        </div>
        <div
          class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2 mdc-layout-grid__cell--align-middle material-settings__cell--justify-end"
        >
          <button
            class="mdc-button mdc-button--raised"
          >
            <i
              aria-hidden="true"
              class="material-icons mdc-button__icon leading-icon"
            >
              cached
            </i>
            <span
              class="mdc-button__label"
            >
              Update
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Settings: Updater matches snapshot when should not update 1`] = `
<div>
  <div
    class="material-settings__updater"
  >
    <div
      class="mdc-layout-grid"
    >
      <div
        class="mdc-layout-grid__inner"
      >
        <div
          class="mdc-layout-grid__cell mdc-layout-grid__cell--span-7 mdc-layout-grid__cell--align-middle"
        >
          <h3
            class="title-large"
          >
            Google Fonts
          </h3>
          <p
            class="body-large"
          >
            Last update on Tue, 13 Apr 2021 14:58:26 GMT
          </p>
        </div>
        <div
          class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3 mdc-layout-grid__cell--align-middle material-settings__cell--justify-end"
        >
          <div
            class="material-settings__switch"
          >
            <div
              class="mdc-switch material-wizard-switch mdc-switch--checked"
            >
              <div
                class="mdc-switch__track"
              />
              <div
                class="mdc-switch__thumb-underlay"
              >
                <div
                  class="mdc-switch__thumb"
                />
                <input
                  aria-checked="true"
                  checked=""
                  class="mdc-switch__native-control"
                  id="updater-4"
                  role="switch"
                  type="checkbox"
                />
              </div>
            </div>
            <label
              for="updater-4"
              id="label-updater-4"
            >
              Auto-updates enabled
            </label>
          </div>
        </div>
        <div
          class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2 mdc-layout-grid__cell--align-middle material-settings__cell--justify-end"
        >
          <button
            class="mdc-button mdc-button--raised"
            disabled=""
          >
            <i
              aria-hidden="true"
              class="material-icons mdc-button__icon leading-icon"
            >
              done
            </i>
            <span
              class="mdc-button__label"
            >
              Updated
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
